page template and nav edit

--- a/wp-content/themes/storefront-child-theme-master/assets/css/src/layout/_layout.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/src/layout/_layout.scss
@@ -181,3 +181,13 @@ table.cart td.actions input {
     height: 50px;
     float: left;
 }
+
+.single-tribe_events .sidebar .tribe-events-single-section .tribe-events-single-section-title, .tribe-common .tribe-common-c-btn, .tribe-common a.tribe-common-c-btn {
+    background-color: #4c73aa;
+    color: #ffffff;
+}
+
+.post-content #tribe-bar-form .tribe-bar-submit input[type=submit], .post-content #tribe-events .tribe-events-button {
+    background: #4c73aa;
+    color: #ffffff;
+}
