--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -40,7 +40,7 @@ h3 time {
 	background-color: #4c73aa !important;	
 }
 
-.tribe-common .tribe-common-form-control-text__input.ticket.meta {
+.tribe-common .tribe-common-form-control-text__input.ticket-meta {
 	padding-top: 0;	
 	padding-bottom: 0;
 	border: 1px solid #bdbdbd;
