--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -43,5 +43,39 @@ h3 time {
 .tribe-common .tribe-common-form-control-text__input.ticket-meta {
 	padding-top: 0;	
 	padding-bottom: 0;
+	padding-left: 10px;	
 	border: 1px solid #bdbdbd;
+}
+
+li.current_page_item a {
+	color: #4c73aa;	
+}
+
+.tribe-events-single ul.tribe-related-events, .tribe-events-related-events-title {
+	display: none;	
+}
+
+h1.tribe-events-single-event-title {
+	width: 100%;	
+}
+
+.tribe-events-single-section {
+	width: 100%;	
+}
+.single-content {
+	padding-right: 0;
+	width: 100%;		
+}
+
+form#tribe-tickets {
+	width: 100%;	
+	float: left;
+	max-width: none;	
+}
+
+#tribe-events-content {
+	max-width: 640px;	
+	float: none;	
+	margin-left: auto;	
+	margin-right: auto;	
 }
