--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -111,7 +111,7 @@ html {
 	margin-bottom: 30px;	
 }
 
-body.single-team {
+body.single-team, body.single-shopping-lists {
 	background: none !important;	
 	padding-top: 63px !important;
 	background: #e5e7e7 !important;
@@ -241,8 +241,104 @@ table:not( .has-background ) tbody td {
 
 button, input[type="button"], input[type="reset"], input[type="submit"], .button, .widget a.button {
 	background: #4c73aa;
+	color: #fff;	
 	&:hover {
 		background: #791919;
 	}
-;
+}
+
+.widget_search form::before, .widget_product_search form::before {
+	top: 4px;	
+}
+
+.fourohfour-columns-2 {
+	display: none;	
+}
+
+.error-404 {
+	max-width: 600px;
+    margin: 0 auto;
+}
+
+table:not( .has-background ) th, table:not( .has-background ) tbody tr:nth-child(2n) td, fieldset, fieldset legend {
+	background-color: transparent;	
+}
+
+table.cart td.product-remove, table.cart td.actions {
+	border-top-color: transparent;	
+}
+
+.wc-proceed-to-checkout .button.checkout-button {
+	font-size: 1.1em !important;	
+	line-height: 1.4 !important;	
+}
+
+.tribe-tickets__registration__title {
+	h2 {
+			text-align: left;
+	}
+}
+
+.tribe-common .tribe-common-h5, .tribe-common .tribe-common-h6, .tribe-common .tribe-common-h2 {
+	font-family: "brandon-grotesque","Helvetica Neue",Arial,sans-serif;
+	font-weight: 700;	
+}
+
+.tribe-common .tribe-common-b2 {
+	font-family: "brandon-grotesque","Helvetica Neue",Arial,sans-serif;
+}
+
+body.page-tribe-attendee-registration .tribe-common .tribe-tickets__mini-cart {
+	background-color: transparent;	
+	border-color: #bdbdbd;	
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+	line-height: 34px;	
+}
+
+body.page-tribe-attendee-registration .tribe-common .tribe-tickets__registration__grid {
+	border-top-color: #bdbdbd !important;
+}
+
+body.page-tribe-attendee-registration .tribe-common .tribe-tickets__item__attendee__fields .tribe-ticket {
+	border: 1px solid #bdbdbd;	
+	padding: 0 10px 10px 10px;	
+	margin-bottom: 10px;	
+}
+
+body.page-tribe-attendee-registration .tribe-common .tribe-tickets__mini-cart {
+	-webkit-border-radius: 0!important;
+	-moz-border-radius: 0!important;
+	border-radius: 0 !important;	
+	border: none!important;	
+	margin-top: 0!important;	
+}
+
+body.page-tribe-attendee-registration .tribe-common .tribe-tickets__mini-cart a.tribe-tickets__footer__back-link {
+	margin-bottom: 5px;	
+	padding-bottom: 5px;	
+}
+
+.tribe-checkout-backlinks {
+	a {
+		display: block;	
+		font-size: 14px;	
+		margin-bottom: 10px;	
+	}
+}
+
+#payment .place-order .button {
+	font-size: 	inherit;
+}
+
+#order_review {
+	background-color: transparent;	
+}
+
+body.page-tribe-attendee-registration footer.entry-header, body.page-tribe-attendee-registration header.entry-header, body.page-tribe-attendee-registration header.entry-meta, body.page-tribe-attendee-registration header.page-header, body.page-tribe-attendee-registration span.edit-link {
+	display: block !important;	
+}
+
+h1.tribe-tickets__registration__page-title {
+	display: none;	
 }
