--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -244,6 +244,7 @@ button, input[type="button"], input[type="reset"], input[type="submit"], .button
 	color: #fff;	
 	&:hover {
 		background: #791919;
+		color: #fff;	
 	}
 }
 
@@ -341,4 +342,73 @@ body.page-tribe-attendee-registration footer.entry-header, body.page-tribe-atten
 
 h1.tribe-tickets__registration__page-title {
 	display: none;	
+}
+
+.page-body {
+	a.wc-backward {
+		line-height: 34px;	
+	}
+}
+
+.button.added_to_cart:focus, .button.wc-forward:focus, a:focus, input:focus, textarea:focus, button:focus, a:focus, button:focus, .button.alt:focus, input:focus, textarea:focus, input[type="button"]:focus, input[type="reset"]:focus, input[type="submit"]:focus, input[type="email"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="search"]:focus {
+	outline: none !important;
+}
+
+.tribe-events {
+	 .tribe-events-c-small-cta {
+		 .tribe-events-c-small-cta__link {
+			border-color: #4c73aa !important;
+			&:hover {
+				color: #4c73aa !important;	
+			}
+		 }
+	 }
+}
+
+.tribe-events .tribe-events-calendar-month__day-cell--selected, .tribe-events .tribe-events-calendar-month__day-cell--selected:focus, .tribe-events .tribe-events-calendar-month__day-cell--selected:hover {
+	background-color: #4c73aa !important;	
+	color: #fff !important;	
+}
+
+.tribe-events .tribe-events-header {
+	background-color: transparent;	
+}
+
+.tribe-common .tribe-common-h3 {
+	font-family: "brandon-grotesque","Helvetica Neue",Arial,sans-serif !important	;
+	font-weight: 700 !important	;	
+}
+
+.tribe-events .tribe-events-c-search__input-control--keyword .tribe-events-c-search__input {    
+    background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='20' height='20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 18.711l-6.044-6.044a7.782 7.782 0 0 0 1.688-4.845c0-2.089-.822-4.044-2.288-5.533C11.866.822 9.91 0 7.822 0S3.778.822 2.29 2.289A7.801 7.801 0 0 0 0 7.822c0 2.09.822 4.045 2.289 5.534a7.801 7.801 0 0 0 5.533 2.288c1.778 0 3.467-.6 4.845-1.688L18.71 20 20 18.711zM3.578 12.067c-2.334-2.334-2.334-6.156 0-8.49a5.968 5.968 0 0 1 4.244-1.755c1.6 0 3.111.622 4.245 1.756 2.333 2.333 2.333 6.155 0 8.489a5.968 5.968 0 0 1-4.245 1.755c-1.6 0-3.11-.622-4.244-1.755z' fill='%234c73aa'/%3E%3C/svg%3E") !important;
+    
+}
+
+.flexible-checkout-fields-before_customer_details  {
+	margin-bottom: 30px;	
+	p.form-row {
+		width: 50%;	
+		float: left;
+		padding-right: 30px;	
+	}
+}
+
+@media screen and (max-width: 856px) {
+	.tribe-events-calendar-month__week {
+		border: none !important;	
+	}
+	.tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date, .tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date-link {
+		color: #fff !important;	
+	}
+	.tribe-events .tribe-events-calendar-month__mobile-events-icon--event {
+	background-color: #4c73aa !important;	
+	}
+	.tribe-events .tribe-events-header, .tribe-events .tribe-events-c-events-bar {
+		background-color: transparent !important;	
+	}
+	.tribe-events .tribe-events-c-events-bar__search-filters-container, .tribe-events .tribe-events-c-view-selector__content {
+		background: #fff !important;	
+	}
+	.tribe-events .tribe-events-c-top-bar__datepicker {
+	}
 }
