--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -499,6 +499,16 @@ form.checkout {
 	}
 }
 
+.single-tribe_events {
+	.tribe-events-single-event-description a, .tribe-events-event-url a, .tribe-venue-url a, .tribe-organizer-url a, .tribe-events-pro .tribe-events-pro-organizer__meta-website a, .tribe-block__organizer__website a, .tribe-events-pro .tribe-events-pro-venue__meta-website a, .tribe-block__venue__website a, .tribe_events p a {
+		color: #4c73aa;
+		&:hover {
+			color: #791919;	
+		}
+	}	
+}
+
+
 @media screen and (max-width: 856px) {
 	.tribe-events-calendar-month__week {
 		border: none !important;	
