changes before blast

--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -538,4 +538,8 @@ form.checkout {
 	#tribe-events-footer:after, #tribe-events-footer:before, #tribe-events-header:after, #tribe-events-header:before {
 		display: none !important;	
 	}
+	.tribe-events-schedule {
+		width: 100%;	
+		margin-bottom: 10px;	
+	}
 }
