--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -635,6 +635,9 @@ form.checkout {
 	.theme-twentytwenty .wc-block-grid.has-4-columns .wc-block-grid__product, .wc-block-grid.has-4-columns .wc-block-grid__product {
 		max-width: 100%;	
 	}
+	.page {
+		padding-bottom: 60px !important;	
+	}
 }
 
 @media print {
