--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -593,6 +593,11 @@ form.checkout {
 	display: none !important;	
 }
 
+a.wc-block-grid__product-link {
+	cursor: default !important;
+	pointer-events: none !important;
+}
+
 
 @media screen and (max-width: 856px) {
 	.tribe-events-calendar-month__week {
