--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -307,6 +307,14 @@ input#credit_called {
 	}
 }
 
+#post-navigation {
+	display: none;	
+}
+
+.text-center {
+	text-align: center;	
+}
+
 .grid-item {
 	position: relative;	
 	width: 300px;	
