grid page spacing

--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -589,6 +589,10 @@ h1.tribe-tickets__registration__page-title {
 	}
 }
 
+.grid {
+	margin-bottom: 50px;	
+}
+
 .single-ticket-page  .hentry {
 	margin-bottom: 30px;	
 }
