--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -601,6 +601,10 @@ h1.tribe-tickets__registration__page-title {
 	float: right;	
 }
 
+button.xoo-wl-open-form-btn {
+	float: right;	
+}
+
 .tribe-checkout-backlinks {
 	width: 41.1764705882%;	
 	float: right;	
