overview pages hide past dates

--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -11,6 +11,12 @@ body.page {
 	padding-right: inherit;
 }
 
+.homeLinks {
+	li.hide {
+		display: none !important;	
+	}
+}
+
 h3 time {
 	font-size: 12px !important;	
 }
