--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -317,7 +317,7 @@ input#credit_called {
 	font-size: 20px;	
 }
 
-.so-thumb {
+.so-thumb, .sold-out {
 	position: relative;	
 	img {
 		opacity: .6;	
