--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -124,7 +124,8 @@ h3 time {
 }
 
 #calendar {
-	padding-bottom: 100px;	
+	margin-bottom: 100px;	
+	border-bottom: 1px solid #fff;	
 }
 
 .tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date, .tribe-events .tribe-events-calendar-month__day--current .tribe-events-calendar-month__day-date-link {
