--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -37,15 +37,18 @@ body.page {
 
 .fc-daygrid-dot-event {
 	align-items: inherit !important;
+	padding: 2px 3px !important;	
 }
 
 .fc-daygrid-event-dot {
 	margin-top: 4px !important;	
+	display: none !important;	
 }
 
 .fc-daygrid-dot-event .fc-event-title {
 	line-height: 1.3em !important;	
 	margin-bottom: 5px !important;	
+	font-weight: 500 !important;	
 }
 
 .fc-theme-standard td, .fc-theme-standard th, .fc-theme-standard .fc-scrollgrid {
