sold out calendar and new grid order

--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -130,6 +130,9 @@ table td.woocommerce-table__product-name {
 .fc .fc-daygrid-event {
 	margin-top: 6px !important;	
 	margin-bottom: 6px;	
+	&.sold-out {
+		opacity: .3;
+	}
 }
 
 .fc-theme-standard td, .fc-theme-standard th, .fc-theme-standard .fc-scrollgrid {
