--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -162,6 +162,45 @@ body .fc .fc-button {
 	}
 }
 
+.single-product {
+	.product_cat-gift-certificates {
+		.wc-pao-addon {
+			text-align: left;
+		}
+		&.product form.cart {
+			width: 100%;	
+			max-width: 600px;
+			.wc-pao-addon-container {
+				width: 50%;	
+				padding: 10px;	
+				float: left;
+				&.wc-pao-addon-mail-to-name-address, &.wc-pao-addon-please-include-this-message-optional {
+					clear: both;	
+					width: 100%;	
+				}
+			}
+		}
+		.single_add_to_cart_button {
+			clear: both;	
+			float: right;	
+		}
+	}
+}
+
+#product-addons-total {
+	display: none;	
+}
+
+div.product-addon-totals {
+	width: 100%;	
+	clear: both;	
+	border-color: #bdbdbd;	
+}
+
+.wc-pao-col1 {
+	display: none !important;	
+}
+
 .fc-event-time {
 	display: none !important;	
 }
