--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -169,20 +169,33 @@ body .fc .fc-button {
 		}
 		&.product form.cart {
 			width: 100%;	
-			max-width: 600px;
+			max-width: none;
+			padding-top: 0 !important;	
 			.wc-pao-addon-container {
 				width: 50%;	
 				padding: 10px;	
 				float: left;
 				&.wc-pao-addon-mail-to-name-address, &.wc-pao-addon-please-include-this-message-optional {
-					clear: both;	
-					width: 100%;	
 				}
 			}
 		}
 		.single_add_to_cart_button {
 			clear: both;	
 			float: right;	
+		}
+		.wc-sc-label  {
+			text-align: left;
+		}
+		#call_for_credit {
+			padding: 10px;	
+			.wc-sc-input {
+				text-align: left !important;
+				padding-right: 10px;	
+				width: 50%;	
+			}
+		}
+		input#credit_called {
+			width: 100%;	
 		}
 	}
 }
