wine club sub button

--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -17,6 +17,14 @@ body.page {
 	}
 }
 
+.xoo-wl-btn-container {
+	text-align: center !important;	
+}
+
+button.xoo-wl-open-form-btn {
+	float: none !important;	
+}
+
 .filter-boxes {
 	width: 100%;	
 	float: left;
