css change vid img

--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -25,6 +25,10 @@ button.xoo-wl-open-form-btn {
 	float: none !important;	
 }
 
+.tribe-common div.tribe-dialog {
+	z-index: 99 !important;	
+}
+
 .filter-boxes {
 	width: 100%;	
 	float: left;
