remove hover on mobile

--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -1181,6 +1181,9 @@ a.wc-block-grid__product-link {
 	.page {
 		padding-bottom: 60px !important;	
 	}
+	.hover-end {
+		display: none !important;	
+	}
 }
 
 @media print {
