--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -405,7 +405,8 @@ html {
 }
 
 .pageFooter {
-	z-index: 999999;	
+// 	z-index: 999999;	
+z-index: 9;	
 }
 
 body.single-team, body.single-shopping-lists {
