--- a/wp-content/plugins/smart-manager-for-wp-e-commerce/assets/css/smart-manager.css
+++ b/wp-content/plugins/smart-manager-for-wp-e-commerce/assets/css/smart-manager.css
@@ -219,7 +219,7 @@ ul.children{list-style:none outside;margin:0px 0 0 24px}
 	margin: 0 0.5em 0.5em 0.5em;
 }
 
-.sm_top_bar_action_btns svg, #sm_custom_views svg {
+.sm_top_bar_action_btns svg, #sm_custom_views svg, #sm_advanced_search_icon {
 	margin-right: 0.5em;
 	height: 1.5em;
 	margin-top: 0em;
@@ -1386,3 +1386,39 @@ div[aria-describedby="sm_inline_dialog"] {
 .htSelectEditor {
 	-webkit-appearance: none !important;
 }
+
+/* Advanced search */
+#sa_smart_manager_main .select2-selection__rendered {
+	line-height: 31px !important;
+}
+#sa_smart_manager_main .select2-container .select2-selection--single {
+	height: 35px !important;
+	border: 1px solid #d2d6dc !important;
+}
+#sa_smart_manager_main .select2-selection__arrow {
+	height: 34px !important;
+}
+#sa_smart_manager_main .select2-selection__arrow b {
+	border-color: #d2d6dc transparent transparent transparent !important;
+	border-style: solid !important;
+	border-width: 5px 4px 0 4px !important;
+}
+.select2-search__field, .sm_advanced_search_select2_dropdown{
+	border: 1px solid #d2d6dc !important;
+}
+
+#sm_advanced_search{
+	padding-top: 0.4em;
+    font-size: 1rem;
+    cursor: pointer;
+    float: right;
+	display: flex;
+	color: #686868;
+	line-height: 1.5em;
+}
+
+#sm_advanced_search_icon{
+	padding-left: 0.5em;
+	opacity: 0.9;
+}
+
