--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -46,6 +46,10 @@ button.xoo-wl-open-form-btn {
 	}
 }
 
+td.ticket-name {
+	max-width: 200px;	
+}
+
 table td.woocommerce-table__product-name {
 	padding-left: 5.25px !important;	
 }
