--- a/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
+++ b/wp-content/themes/storefront-child-theme-master/assets/css/brett.scss
@@ -11,6 +11,14 @@ body.page {
 	padding-right: inherit;
 }
 
+.postid-45292 {
+	#post-45292 {
+		h3 {
+			display: none !important;	
+		}
+	}
+}
+
 .homeLinks {
 	li.hide {
 		display: none !important;
