Add brett's overrides to the main site.scss file, and display start and end dates on Other Dates button for classes when the dates are different.

--- a/wp-content/themes/storefront-child-theme-master/style.css
+++ b/wp-content/themes/storefront-child-theme-master/style.css
@@ -24,4 +24,4 @@ Images License: GNU General Public License v2 or later
  */
 
  @import "assets/css/site.min.css"; 
- @import "assets/css/brett.css";
+ /*@import "assets/css/brett.css"; added to site.scss*/
